# Databases

./: 01_10_25.sql  README.md  lab2.sql  scriptBud.sql  БД_Общежития_Б23-205_Б23-215_20250917.sql
.cursor/rules/: pgadmin-erd-generated.mdc
files/: BDLab2-1_10а.docx
labs/: lab10.sql
labs/lab1/: lab1.sql
labs/lab10/: lab10.sql  lab10_tests.sql
labs/lab11/: lab11.sql
labs/lab12/: .gitignore  README.md  pyproject.toml  task.md
labs/lab12/site/: common.js  index.html  racks.html  racks.js  rooms.html  rooms.js  styles.css
labs/lab12/src/lab12/: __init__.py  database.py  errors.py  migrations.py  models.py  paths.py  project_config.py  schemas.py
labs/lab12/src/lab12/api/: app.py  converters.py
labs/lab12/src/lab12/api/routers/: inventory.py  racks.py  rooms.py
labs/lab12/src/lab12/cli/: __init__.py  insert.sql  main.py  prompts.py  racks.py  rooms.py  seed.py
labs/lab3/: lab3.sql
labs/lab4/: lab4.sql
labs/lab5/: lab5.sql
labs/lab6/: bd6_inserts.sql  lab6.sql
labs/lab7/: inserts_bd6_eco.sql  lab7.sql
labs/lab8/: lab8  lab8.sql
labs/lab9/: insert.sql  lab9.sql
sems/: 25_10_15.sql  25_11_12.sql  25_11_26.sql  25_12_10.sql  26_02_18.sql  B23_20251001.sql  RecursionTasks.sql  b23-205(215)_beauty_shop_query_tasks.sql  insert205215.sql
